# DocumentAnalysisMicrosoft

./: .env.local-pdf-test  .env.local-pdf-test.example  .gitignore  .pre-commit-config.yaml  BLOCKED.md  Makefile  README.md  bootstrap.sh  pyproject.toml  requirements-dev.txt
features/core/: .env.example  README.md  pyproject.toml
features/core/src/llm_clients/: __init__.py  base.py  retry.py
features/core/src/llm_clients/anthropic/: __init__.py  client.py  config.py
features/core/src/llm_clients/azure_openai/: __init__.py  client.py  config.py
features/core/src/llm_clients/ollama_local/: __init__.py  client.py  config.py
features/core/src/llm_clients/openai_direct/: __init__.py  client.py  config.py
features/core/src/llm_clients/vllm_remote/: __init__.py  client.py  config.py
features/core/tests/: conftest.py  test_anthropic.py  test_azure_openai.py  test_base.py  test_ollama_local.py  test_openai_direct.py  test_retry.py
features/evaluators/chunk_match/: .env.example  README.md  pyproject.toml
features/evaluators/chunk_match/src/query_index_eval/: __init__.py  cli.py  runner.py  schema.py
features/evaluators/chunk_match/tests/: conftest.py  test_cli.py  test_public_api.py  test_runner.py  test_schema.py
features/goldens/: README.md  pyproject.toml
features/goldens/src/goldens/: __init__.py
features/goldens/src/goldens/api/: __init__.py  app.py  auth.py  config.py  identity.py  schemas.py
features/goldens/src/goldens/api/routers/: __init__.py  docs.py  entries.py
features/goldens/src/goldens/creation/: __init__.py  _elements_stub.py  _time.py  _toml.py  curate.py  identity.py  positions.py  synthetic.py  synthetic_decomposition.py  synthetic_dedup.py
features/goldens/src/goldens/creation/elements/: __init__.py  adapter.py  analyze_json.py
features/goldens/src/goldens/creation/prompts/: __init__.py  list_item_v1.json  paragraph_v1.json  table_row_v1.json
features/goldens/src/goldens/operations/: __init__.py  _time.py  add_review.py  deprecate.py  errors.py  refine.py
features/goldens/src/goldens/schemas/: __init__.py  base.py  retrieval.py
features/goldens/src/goldens/storage/: __init__.py  ids.py  log.py  projection.py
features/goldens/tests/: conftest.py  test_api_app.py  test_api_auth.py  test_api_concurrency.py  test_api_config.py  test_api_identity.py  test_api_routers_docs.py  test_api_routers_entries.py  test_api_schemas.py  test_api_streaming_synthesise.py  test_base.py  test_creation__time.py  test_creation__toml.py  test_creation_cli.py  test_creation_curate.py  test_creation_decomposition.py  test_creation_dedup.py  test_creation_elements_adapter.py  test_creation_elements_analyze_json.py  test_creation_identity.py  test_creation_positions.py  test_creation_prompts.py  test_creation_synthetic_respx.py  test_operations__time.py  test_operations_add_review.py  test_operations_deprecate.py  test_operations_errors.py  test_operations_refine.py  test_pydantic_byte_equivalence.py  test_retrieval.py  test_storage_ids.py  test_storage_log.py  test_storage_log_bulk.py  test_storage_projection.py  test_synthesise_iter.py
features/goldens/tests/fixtures/: analyze_minimal.json  analyze_with_two_pages.json  canonical_legacy_events.jsonl
features/ingestion/: .env.example  README.md  pyproject.toml
features/ingestion/src/ingestion/: chunk.py  client.py  embed.py  slug.py  timestamp.py  upload.py
features/ingestion/src/ingestion/chunkers/: registry.py  section.py
features/ingestion/tests/unit/: test_chunk.py  test_chunkers_base.py  test_chunkers_registry.py  test_cli.py  test_client.py  test_embed.py  test_public_api.py  test_timestamp.py  test_upload.py
features/pipelines/local-pdf/: README.md  pyproject.toml
features/pipelines/local-pdf/src/local_pdf/: __init__.py  llm.py
features/pipelines/local-pdf/src/local_pdf/api/: __init__.py  app.py  auth.py  config.py  schemas.py
features/pipelines/local-pdf/src/local_pdf/comparison/: __init__.py  bm25.py  similarity.py
features/pipelines/local-pdf/src/local_pdf/convert/: __init__.py  source_elements.py
features/pipelines/local-pdf/src/local_pdf/llm_server/: __init__.py  process.py
features/pipelines/local-pdf/src/local_pdf/provenienz/: __init__.py  approaches.py  bib_matcher.py  calculator.py  context.py  llm.py  reasons.py  registers.py  searcher.py  skill_dispatcher.py  skill_migration.py  skills.py  storage.py  table_consistency.py  table_parser.py  text.py  tools.py
features/pipelines/local-pdf/tests/: conftest.py  test_app.py  test_auth.py  test_cli_serve.py  test_comparison.py  test_config.py  test_convert_source_elements.py  test_llm.py  test_provenienz_approaches.py  test_provenienz_auto_select.py  test_provenienz_bib_matcher.py  test_provenienz_calculator.py  test_provenienz_llm.py  test_provenienz_llm_wiring.py  test_provenienz_phase3_multi_agent.py  test_provenienz_reasons.py  test_provenienz_reasons_injection.py  test_provenienz_registers.py  test_provenienz_searcher.py  test_provenienz_skill_migration.py  test_provenienz_skills.py  test_provenienz_storage.py  test_provenienz_table_consistency.py  test_provenienz_table_parser.py  test_router_comparison.py  test_router_llm_server.py  test_router_provenienz_approaches.py  test_router_provenienz_decide.py  test_router_provenienz_evaluate.py  test_router_provenienz_extract.py  test_router_provenienz_formulate_task.py  test_router_provenienz_investigate_table.py  test_router_provenienz_next_step_stream.py  test_router_provenienz_pin_approach.py  test_router_provenienz_propose_stop.py  test_router_provenienz_reasons_write.py  test_router_provenienz_recursion_depth.py  test_router_provenienz_refresh_chunk.py  test_router_provenienz_search.py  test_router_provenienz_sessions.py  (+24 more)
features/pipelines/microsoft/retrieval/: .env.example  README.md  pyproject.toml
features/pipelines/microsoft/retrieval/tests/: conftest.py  test_client.py  test_embeddings.py  test_ingest.py  test_public_api.py  test_search.py
vllm-server/: .gitignore  README.md  config.toml  pyproject.toml  start.sh
(+454 files in other folders)
