[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "core-llm-clients"
version = "0.1.0"
description = "Multi-vendor LLM client abstraction shared across pipelines and evaluators."
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40.0",
    "tenacity>=9.0.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "respx>=0.21.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=llm_clients --cov-fail-under=85 --cov-branch --cov-report=term-missing"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "class .*\\(Protocol\\):",
    "if TYPE_CHECKING:",
]
