[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "goldens"
version = "0.1.0"
description = "Event-sourced golden-set storage for evaluation."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=goldens --cov-fail-under=100 --cov-branch --cov-report=term-missing"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "class .*\\(Protocol\\):",
    "if TYPE_CHECKING:",
]
